doc: EDGE javadoc